objects/vlocity_ins__Household__c.object
<CustomObject>
    <description>A household, or affinity group, is a collection of parties who are somehow related to each other. A household will typically represent a family or the people who all live within a given dwelling. A group is any user-defined collection of member parties: people or organizations. Households or affinity groups are useful when your customers are the members of the group and you want to visualize the net business that you are doing within that group.</description>
    <fields>
        <fullName>vlocity_ins__Address1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Address2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Address__c</fullName>
        <formula>vlocity_ins__Address1__c &amp; BR() &amp; 
IF( ISBLANK(vlocity_ins__Address2__c), &quot;&quot;, vlocity_ins__Address2__c &amp; BR() ) &amp; 
IF( ISBLANK(vlocity_ins__City__c), &quot;&quot;, vlocity_ins__City__c) &amp; IF(AND(NOT(ISBLANK(vlocity_ins__City__c)), OR( NOT(ISBLANK(vlocity_ins__State__c)), NOT(ISBLANK(vlocity_ins__PostalCode__c)), NOT(ISBLANK(vlocity_ins__Country__c)))), &quot;, &quot;, &quot; &quot;) &amp; vlocity_ins__State__c &amp; &quot; &quot; &amp; vlocity_ins__PostalCode__c &amp; BR() &amp; 
vlocity_ins__Country__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HouseholdAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HouseholdAddress</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOwnedResidence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owned Residence ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostalCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Households</relationshipLabel>
        <relationshipName>GroupHouseholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__Party__c.vlocity_ins__PartyEntityType__c</field>
                <operation>notEqual</operation>
                <value>&apos;Household&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>GroupHouseholds</relationshipLabel>
        <relationshipName>GroupHouseholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResidenceType__c</fullName>
        <label>Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
                <value>
                    <fullName>Multi-Family Dwelling</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate Family</fullName>
                </value>
                <value>
                    <fullName>Extended Family</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Household</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Address__c</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Groups</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__Household__c.vlocity_ins__Group</value>
        </filters>
        <label>Groups</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Households</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Address__c</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__Household__c.vlocity_ins__Household</value>
        </filters>
        <label>Households</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Group</fullName>
        <active>true</active>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Household</fullName>
        <active>true</active>
        <label>Household</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>